--- a/KaggleProject.qmd
+++ b/KaggleProject.qmd
@@ -121,6 +121,12 @@ df %>%
   head()
 ```
 
+# How many trips were during the weekend (Saturday and Sunday) and during the work days (Monday - Friday)?
+```{r}
+df %>%
+  filter(pickup_day %in% c(1:5) | dropoff_day %in% c(1:5)) %>%
+  summarise(Mon_Fri=n() / nrow(df) * 100, Sat_Sun = 100 - Mon_Fri)
+```
 
 
 
