--- a/KaggleProject.qmd
+++ b/KaggleProject.qmd
@@ -34,6 +34,7 @@ library("skimr")
 library("dplyr")
 library("tidyverse")
 library("ggplot2")
+library("DT")
 ```
 
 ## Read data
@@ -124,7 +125,7 @@ df$payment_type_name %>% head()
 
 ## Date and Time transformation
 
-Transforming the time from POSIXct to date-time format using lubridate package.
+Transforming the time from POSIXct to date-time format.
 
 ```{r}
 df <- df %>%
@@ -201,14 +202,15 @@ Trips starting or ending in some locations tend to have higher average tips than
 ```{r}
 df %>%
   group_by(pu_location_id) %>%
-  summarise(pickup_tip = mean(tip_amount), num_trips = n()) %>%
-  arrange(desc(pickup_tip))
-
+  summarise(avg_tip = mean(tip_amount), num_trips = n()) %>%
+  arrange(desc(avg_tip)) %>%
+  datatable()
 
 df %>%
   group_by(do_location_id) %>%
-  summarise(dropoff_tip = mean(tip_amount), num_trips = n()) %>%
-  arrange(desc(dropoff_tip))
+  summarise(avg_tip = mean(tip_amount), num_trips = n()) %>%
+  arrange(desc(avg_tip)) %>%
+  datatable()
 
 ```
 
@@ -276,8 +278,11 @@ df %>%
   )
 ```
 
-# Interpretation
+# Interpretation and Conclusion
+
+Given the information presented we can conclude that the tips given to drivers are influenced by various factors like trip distance, dropoff hour, pickup and dropoff locations, weekday or weekend.
 
 # References
-
+- [Yellow Taxi Trip Data](https://www.kaggle.com/datasets/ranjanrakesh51/yellow-taxi-trip-data)
+- [R-statistics](https://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html)
 
